# FaSa

./: README.md
backend/: .env.example  Cargo.toml  Dockerfile  README.md  render.yaml
backend/config/: cors.rs
backend/migrations/: 0001_create_users.sql
backend/src/: error.rs  handlers.rs  jwt.rs  main.rs  models.rs  password.rs  routes.rs  state.rs
backend/src/routes/: auth.rs
frontend/src/components/: Button.jsx  InputField.jsx
frontend/src/pages/: LoginPage.jsx  SignUpPage.jsx
frontend/src/routes/: AppRoutes.jsx
