[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum ="0.8.9"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
# SQLx configured for asynchronous Postgres connections
sqlx = { version = "0.9.0", features = [ "runtime-tokio-native-tls", "postgres" ] }
bcrypt = "0.19.0"

#CORS Management
tower-http = { version = "0.7.0", features = ["cors"] }